generated/checkers/gen/AllGen-Uninit-Data-eaa03486d932572dfd1c5f64f9dfebe572ad88c0/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::getVarRegion(const clang::VarDecl*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:94:32: error: ‘const class clang::ento::ProgramState’ has no member named ‘getRegionManager’; did you mean ‘getSymbolManager’?
   94 |   const MemRegion *MR = State->getRegionManager().getVarRegion(VD, LCtx);
      |                                ^~~~~~~~~~~~~~~~
      |                                getSymbolManager
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
